# findoc-rag

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  ROADMAP.md  ablation_expand.py  ablation_retrieval.py  ablation_tuned.py  api_test.py  app.py  ask.py  build_bm25_index.py  build_vector_index.py  demo.py  eval_retrieval.py  extract_text.py  extract_text_v2.py  get_pdfs.py  hybrid_demo.py  make_chunks.py  pyproject.toml  requirements-lock.txt  requirements.txt  rerank_demo.py  slice_stats.py  test_groq.py
.github/workflows/: ci.yml
config/: settings.yaml
data/: DATA_CARD.md  README.md
eval/: RESULTS.md
findoc-space/: README.md  requirements.txt
findoc-space/config/: settings.yaml
notebooks/: 01_explore_financebench.ipynb
src/findoc_rag/: __init__.py  config.py
src/findoc_rag/api/: __init__.py  app.py
src/findoc_rag/data/: __init__.py  load_financebench.py
src/findoc_rag/evaluation/: __init__.py  evaluate.py
src/findoc_rag/generate/: __init__.py  generator.py
src/findoc_rag/index/: __init__.py  build_index.py
src/findoc_rag/ingest/: __init__.py  chunking.py
src/findoc_rag/retrieval/: __init__.py  retriever.py
tests/: test_smoke.py
